--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-background-timer": "^2.4.1",
+    "react-native-contacts": "^8.0.1",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
