--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "libphonenumber-js": "^1.11.10",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-background-timer": "^2.4.1",
