--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native": "0.75.2",
     "react-native-background-timer": "^2.4.1",
     "react-native-contacts": "^8.0.1",
+    "react-native-modal": "^13.0.1",
     "react-native-permissions": "^4.1.5",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-sound": "^0.11.2",
