--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-contacts": "^8.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^4.1.5",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
