--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-contacts": "^8.0.1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "^1.18.2",
     "react-native-modal": "^13.0.1",
     "react-native-permissions": "^4.1.5",
     "react-native-phone-number-input": "^2.1.0",
