--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-sound": "^0.11.2",
+    "react-native-switch": "^1.5.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0"
   },
