--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-permissions": "^4.1.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-sound": "^0.11.2",
