--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-sound": "^0.11.2",
     "react-native-switch": "^1.5.1",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
