--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "libphonenumber-js": "^1.11.10",
     "react": "18.3.1",
