--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "^1.18.2",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.4.1",
     "react-native-permissions": "^4.1.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -38,6 +39,7 @@
     "react-native-screens": "^3.34.0",
     "react-native-sound": "^0.11.2",
     "react-native-switch": "^1.5.1",
+    "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
