--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.0.5",
     "@notifee/react-native": "^9.0.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^21.0.0",
@@ -28,11 +30,13 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-contacts": "^8.0.1",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-maps": "^1.18.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.4.1",
     "react-native-permissions": "^4.1.5",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "^3.16.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.11.0",
