--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-contacts": "^8.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "^1.18.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.4.1",
@@ -46,6 +47,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "uuid": "^11.0.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
