--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-crop-picker": "^0.41.4",
     "react-native-maps": "^1.18.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.4.1",
