--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-background-timer": "^2.4.1",
+    "react-native-bootsplash": "^6.3.2",
     "react-native-contacts": "^8.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.20.2",
